--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,19 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Chivo:wght@100;400&family=Noto+Sans+Tamil:wght@400;600&family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Chivo:wght@100;400&family=League+Spartan:wght@700&family=Noto+Sans+Tamil:wght@400;600&family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap");
+
+:root {
+  --fondonegro: #231f20;
+  --verdeclaro: #65c18b;
+  --verdeoscuro: #239055;
+  --colorfuente: #f4f4f4;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+  font-family: "Chivo", sans-serif;
+  font-family: "Noto Sans Tamil", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
+  background-color: var(--fondonegro);
+  color: var(--colorfuente);
 }
