--- a/src/App.css
+++ b/src/App.css
@@ -109,3 +109,47 @@ ul {
  .text-presentacion{
   max-width: 600px;
  }
+
+
+ /**FormSection**/
+
+ .FormContainer{
+  background-color: var(--verdeclaro);
+}
+ 
+.input-bottom-border {
+  border: none; 
+  border-bottom: 3px solid black; 
+  padding: 5px;
+  outline: none; 
+  width: 100%;
+  box-sizing: border-box; 
+}
+.input-bottom-border::placeholder{
+  color: black;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+}
+
+
+.button-form {
+  background-color: hsl(0, 0%, 0%);
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  color: #f4f4f4; 
+  border: none; 
+  padding: 10px 20px; 
+  border-radius: 25px; 
+  font-size: 16px;
+  cursor: pointer; 
+  margin-top: 10px;
+}
+
+
+.button-form:hover {
+  background-color: #239055; 
+}
+
+.LogoForm{
+  background-color: black;
+}
