--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Open+Sans:wght@300&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@800&family=Poppins:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@800&family=Poppins:wght@400;500;600&display=swap");
 
 :root {
   --fondonegro: #231f20;
@@ -77,35 +77,37 @@ ul {
 
 /*--- Presentation Section ---*/
 
-.presentation-container {
-  margin-top: 56px;
-}
-
 .section-size {
   height: 100vh;
 }
 
-@media (min-width: 768px) {
-  .presentation-container {
-    margin-top: 72px;
-  }
-}
-
-
 /**Presentacion**/
-.presentacion{
+.presentacion {
   background-color: var(--verdeclaro);
+  margin-top: 76px !important;
 }
 
-.presentacion h1{
-  font-family: 'League Spartan', sans-serif;
+.presentacion h1 {
+  font-family: "League Spartan", sans-serif;
   font-size: 70px;
   color: black;
-  
 }
- .presentacion p{
+.presentacion p {
   font-family: "Open Sans", sans-serif;
- }
- .text-presentacion{
+}
+.text-presentacion {
   max-width: 600px;
- }
+}
+
+/** Objetivos **/
+
+.aboutus-container {
+  padding-bottom: 12px;
+  border-bottom: 3px solid var(--verdeclaro);
+}
+
+.aboutus-text h2 {
+  color: var(--verdeclaro);
+  font-size: 60px;
+  font-family: "League Spartan", sans-serif;
+}
