--- a/src/App.css
+++ b/src/App.css
@@ -214,6 +214,12 @@ ul {
   transition: background-color 0.3s ease; /* Transición suave al hacer hover */
 }
 
+/**Footer**/
+.footer{
+  background-color: #000000;
+}
+
+
 /*?-----Media Queries-----*/
 @media (min-width: 768px) {
   .presentacion {
