--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 body {
   /* font-family: 'League Spartan', sans-serif; */
   font-family: "Open Sans", sans-serif;
-  background-color: var(--fondonegro) !important;
+  background-color: black !important;
   color: var(--colorfuente) !important;
 }
 
@@ -24,7 +24,7 @@ ul {
   list-style-type: none;
 }
 
-/*?--- Navbar start ---*/
+/*--- Navbar start ---*/
 
 .navbar-fixed {
   position: fixed !important;
@@ -93,7 +93,8 @@ ul {
   color: black;
 }
 .presentacion p {
-  font-family: "Open Sans", sans-serif;
+  color: black;
+  font-weight: 400;
 }
 .text-presentacion {
   max-width: 600px;
@@ -110,6 +111,34 @@ ul {
   color: var(--verdeclaro);
   font-size: 60px;
   font-family: "League Spartan", sans-serif;
+}
+
+.objetives-container img {
+  filter: invert(68%) sepia(8%) saturate(1801%) hue-rotate(92deg)
+    brightness(96%) contrast(95%);
+}
+
+.objetives-container p {
+  letter-spacing: 2px;
+}
+
+/** Contact **/
+.icons-container a {
+  color: var(--verdeclaro);
+  font-size: 28px;
+  width: 60px;
+  height: 60px;
+  line-height: 55px;
+  text-align: center;
+  background-color: black;
+  border: 1px solid var(--verdeclaro);
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.icons-container a:hover {
+  color: black;
+  background-color: var(--verdeclaro);
 }
 
 /**FormSection**/
@@ -155,14 +184,10 @@ ul {
 
 .LogoForm h2 {
   font-family: "League Spartan", sans-serif;
-  font-size: 25px;
-  color: #a7a7a7;
   margin-bottom: 0px;
 }
 .LogoForm p {
-  font-family: "League Spartan", sans-serif;
-  font-size: 25px;
-  color: #f4f4f4;
+  font-size: 15px;
 }
 
 /**Featured**/
