change styles css to color black and white

--- a/src/App.css
+++ b/src/App.css
@@ -83,15 +83,16 @@ ul {
 
 /**Presentacion**/
 .presentacion {
-  background-color: var(--verdeclaro);
-  margin-top: 76px !important;
+background-color: #f4f4f4;
+  margin-top: 500px !important;
+ 
   
 }
 
 .presentacion h1 {
   font-family: "League Spartan", sans-serif;
   font-size: 70px;
-  color: black;
+  color: var(--verdeoscuro);
 }
 .presentacion p {
   color: black;
@@ -102,7 +103,7 @@ ul {
 }
 .Presentation-divition {
   width: 80%;
-  background-color: #000000;
+  background-color: #231f20 ;
   height: 45px; 
   margin-top: 20px; 
   border: none; 
@@ -112,8 +113,8 @@ ul {
 /** Objetivos **/
 
 .aboutus-container {
-  padding-bottom: 12px;
-  border-bottom: 3px solid var(--verdeclaro);
+
+
   
 }
 
@@ -122,11 +123,23 @@ ul {
   font-size: 60px;
   font-family: "League Spartan", sans-serif;
 }
-.objetives-container{
+.about-divisor{
+  
   background-color: #65c18b;
+  height: 10px; 
+
+  border: none; 
+}
+.objetives-container{
+  background-color: #f4f4f4;
 }
 .objetives{
-  background-color: #000000;
+  background-color: #231f20;
+}
+.objetives:hover{
+  background-color: #f4f4f4;
+  color: #000000;
+  
 }
 
 .objetives-container img {
@@ -160,7 +173,7 @@ ul {
 /**FormSection**/
 
 .FormContainer {
-  background-color: var(--verdeclaro);
+  background-color: #f4f4f4;
 }
 
 .input-bottom-border {
@@ -209,13 +222,13 @@ ul {
 /**Featured**/
 
 .featured {
-  background-color: black;
+  background-color: #f4f4f4;
 }
 .featured-rigth {
   margin: 0 auto;
-  border-radius: 8px;
+  
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  background: linear-gradient(#000000, #000000) padding-box,
+  background: linear-gradient(#f4f4f4, #f4f4f4) padding-box,
     linear-gradient(145deg, transparent 30%, #65c18b, #239055) border-box;
   border: 0.15rem solid transparent;
 }
@@ -225,19 +238,19 @@ ul {
 }
 .featured-rigth p {
   font-family: "Open Sans", sans-serif;
-  color: var(--colorfuente);
+  color: #000000;
 }
 .featured-rigth:hover {
-  background: linear-gradient(#000000, #000000) padding-box,
-    linear-gradient(145deg, transparent 30%, #65c18b, #f7f7f7) border-box;
+  background: linear-gradient(#f4f4f4, #f4f4f4) padding-box,
+    linear-gradient(145deg, transparent 30%, #000000, #65c18b) border-box;
   transition: background-color 0.3s ease;
 }
 
 .featured-left {
   margin: 0 auto;
-  border-radius: 8px;
+  
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  background: linear-gradient(#000000, #000000) padding-box,
+  background: linear-gradient(#f4f4f4, #f4f4f4) padding-box,
     linear-gradient(218deg, transparent 30%, #65c18b, #239055) border-box;
   border: 0.15rem solid transparent;
 }
@@ -247,12 +260,17 @@ ul {
 }
 .featured-left p {
   font-family: "Open Sans", sans-serif;
-  color: var(--colorfuente);
+  color: var(--fondonegro);
 }
 .featured-left:hover {
-  background: linear-gradient(#000000, #000000) padding-box,
-    linear-gradient(218deg, transparent 30%, #65c18b, #f4f4f4) border-box;
-  transition: background-color 0.3s ease; /* Transición suave al hacer hover */
+  background: linear-gradient(#f4f4f4, #f4f4f4) padding-box,
+    linear-gradient(145deg, transparent 30%, #000000, #65c18b) border-box;
+  transition: background-color 0.3s ease;
+}
+.Logo-Featured{
+  max-width: 100%;
+  height: auto;
+ object-fit: contain;
 }
 
 /**Footer**/
