--- a/src/App.css
+++ b/src/App.css
@@ -396,6 +396,42 @@ h3 {
   margin-top: 20px;
 }
 
+/* OfficeGallery */
+
+.image-container {
+  overflow: hidden;
+  position: relative;
+}
+
+.card-container{
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: transform 0.2s ease-in-out;
+}
+.office-image {
+
+  width: 100%;
+  height: 200px;
+}
+.office-body{
+  background-color: #0000009d;
+}
+.card-container:hover {
+  transform: scale(1.1);
+}
+
+.modal-container {
+  max-width: 20%; 
+  margin: 0 auto; 
+  padding: 20px;
+}
+.modal-image {
+  max-width: 100%; 
+  height: auto;
+}
+
 /**Footer**/
 .footer {
   font-family: "Open Sans", sans-serif;
