agregue nuevos logos de las empresas aliadas, y acomode bien los tamaños para que se vean bien todos los logos

--- a/src/App.css
+++ b/src/App.css
@@ -476,6 +476,15 @@ h3 {
   color: #65c18b;
 }
 
+/* Companies section */
+
+.companies-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 250px;
+}
+
 /*?-----Media Queries-----*/
 
 @media (min-width: 400px) {
