--- a/src/App.css
+++ b/src/App.css
@@ -482,7 +482,27 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-height: 250px;
+}
+
+/* industries section */
+.industries-text p {
+  letter-spacing: 1px;
+  font-size: 18px;
+}
+
+.industries-list {
+  border-left: 5px solid var(--verdeclaro);
+}
+
+.industries-list ul {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.industries-list ul li {
+  font-size: 20px;
+  letter-spacing: 1px;
 }
 
 /*?-----Media Queries-----*/
@@ -496,6 +516,9 @@ h3 {
 @media (min-width: 768px) {
   .axes-one {
     border-right: 3px solid black;
+  }
+  .industries-list ul {
+    max-height: 280px;
   }
 }
 
